# osmscout-scripts

./: .gitignore  LICENSE  README.md  asia-armenia.poly  asia-bhutan.poly  asia-laos.poly  bahamas.poly  build-africa.sh  build-asia-missing-countries.sh  build-asia.sh  build-australia-oceania.sh  build-central-america.sh  build-europe.sh  build-missing-countries.sh  build-north-america.sh  build-russia.sh  build-south-america.sh  build.sh  caribbean-islands.poly  cleanup.sh  costa-rica.poly  dem3.sh  download.sh  gc.sh  hongkong.poly  map.ost  mayotte.poly  panama.poly  prepare-contour-large.sh  prepare-contour-norway.sh  prepare-contour-phyghtmap.sh  prepare-contour.sh  secret-template.sh  translations-convert.py  translations-prettyprint.py  translations-wikidata.py  update-contour-ids.py  update-contour-ids.sh  upload.sh  variables.sh
.tx/: config
translations/: cs.ts  de.ts  en.ts  es.ts  et.ts  fa.ts  fi_FI.ts  fr.ts  hu.ts  it.ts  nb.ts  nb_NO.ts  nl.ts  nl_BE.ts  pl.ts  pt_BR.ts  ru.ts  sv.ts  zh_CN.ts
ubuntu-phyghtmap/: Dockerfile
update-contour-ids/: CMakeLists.txt  update-contour-ids.cpp  update-contour-ids.sh
web/: .gitignore  .htaccess  addmap.php  cleanup.php  composer.json  database-l10n-cs.sql  database-l10n-en.sql  database-l10n-nb.sql  database-l10n-sv.sql  database-template.php  database.sql  latest.php  outdated.php  rss.php  secret-template.php
web/home/eson/Dokument/vers-ttning/00-Sailfish/OSM Scout/: database-l10n-sv.sql
web/lib/: Utils.php
web/lib/Nette/: Framework.php  loader.php
web/lib/Nette/Tracy/templates/: bar.phtml
